--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="app">
+    <div class="quote generator">
         <header>Looking for some motivation?</header>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
