add: favicon.ico

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="Author" content="Dimitra Karamperi">
     <link href="https://fonts.googleapis.com/css2?family=Mina:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <script src="js/javascript.js"></script>
 </head>
 
