fix: Minor improvement in button text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section class="buttons">
           <button type="button" id="js-new-quote" class="new-quote button">
-            Motivate me!
+            Click here for a new quote!
           </button>
           <!--
             The anchor tag rel=”noopener” or rel=”noreferrer” attribute improves the website security: 
