fix: Add meta name keyword

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>A motivational quote generator</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="motivational quotes, quote generator, random quote">
+    <meta name="keywords" content="motivational quotes, quote generator, random quote, hand-picked quotes">
     <meta name="description" content="A motivational quote generator">
     <meta name="Author" content="Dimitra Karamperi">
     <link href="https://fonts.googleapis.com/css2?family=Mina:wght@400;700&display=swap" rel="stylesheet">
